feat: use container test for e2e tests